--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
 
+<h1 class="text-center primary">Welcome to our weather app!</h1>
+
+<div class="container">
+<a href="/home" class="btn btn-success">Home</a>
+<a href="/settings" class="btn btn-success">Settings</a>
+
 <router-outlet></router-outlet>
+</div>
+
+
