--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,26 +1,6 @@
-<p>
-  Hello World!
-</p>
+<h1 class="text-center primary">Welcome to our weather app!</h1>
 
-<table class="display">
-  <thead>
-    <td>
-    <tr>Number</tr>
-  </td>
-  </thead>
-  <tbody *ngFor="let number of allnumber">
-    <tr>{{number}}</tr>
-  </tbody>
-</table>
-<button (click)="count()">show other 10</button>
-<br>
-<table class="display">
-    <thead>
-      <td>
-      <tr>Number</tr>
-    </td>
-    </thead>
-    <tbody *ngFor="let number of numbers">
-      <tr>{{number}}</tr>
-    </tbody>
-  </table>
+<div class="container">
+<a href="/home" class="btn btn-success">Home</a>
+<a href="/settings" class="btn btn-success">Settings</a>
+</div>
