--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="info">
+    <h1>City : {{weather.name}}</h1>
+<h1>latitude : {{weather.coord.lat}}</h1>
+<h1>lontitude : {{weather.coord.lon}}</h1>
+<h1>Temperature : {{weather.main.temp}}</h1>
+<h1>Clouds : {{weather.weather[0].main}}</h1>
+  </div>
+  <img *ngIf="weather.weather[0].main == 'Clear'" src="assets/sunny.jpg">
+  <img *ngIf="weather.weather[0].main == 'Clouds'" src="assets/clouds.jpg">
