--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,3 +1,11 @@
-<p>
-  settings works!
-</p>
+<h1>Enter city and code</h1>
+
+<form >
+<div class="form-group"><label >City</label>
+  <input type="text" name="city" class="form-control" [(ngModel)]="city">
+
+  <label >Code</label>
+  <input type="text" name="code" class="form-control" [(ngModel)]="code">
+</div>
+  <button class="btn btn-primary" (click)="save()">Save Changes</button>
+</form>
