--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,9 +2,9 @@
   <div class="info">
     <h1>City : {{weather.name}}</h1>
 <h1>latitude : {{weather.coord.lat}}</h1>
-<h1>lontitude : {{weather.coord.lon}}</h1>
+<h1>longitude : {{weather.coord.lon}}</h1>
 <h1>Temperature : {{weather.main.temp}}</h1>
 <h1>Clouds : {{weather.weather[0].main}}</h1>
   </div>
-  <img *ngIf="weather.weather[0].main == 'Clear'" src="assets/sunny.jpg">
-  <img *ngIf="weather.weather[0].main == 'Clouds'" src="assets/clouds.jpg">
+  <img class="rounded"style='width: 450px;height: 250px;'*ngIf="weather.weather[0].main == 'Clear'" src="assets/sunny.jpg">
+  <img class="rounded"style='width: 450px;height: 250px;'*ngIf="weather.weather[0].main == 'Clouds'" src="assets/clouds.jpg">
