--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,11 +1,12 @@
-<h1>Enter city and code</h1>
+<h1>Enter Name Of The City</h1>
 
 <form >
 <div class="form-group"><label >City</label>
   <input type="text" name="city" class="form-control" [(ngModel)]="city">
-
-  <label >Code</label>
+  <footer class="text-muted">Example: London</footer>
+  <!-- <label >Code</label>
   <input type="text" name="code" class="form-control" [(ngModel)]="code">
+  <footer class="text-muted">Example: UK</footer> -->
 </div>
   <button class="btn btn-primary" (click)="save()">Save Changes</button>
 </form>
